css/data_selection.css
h6{
    font-size: 20px;
}

label{
    font-size: 30px;
}

.data-type{
    width: 100%;
    height: 240px;
    position: absolute;
    
}

.data-content{
    position: absolute;
    top: 240px;
    bottom: 0;
    width: 100%;
    
}

.forms{
    height: 300px;
}

.nav-buttons
{
    margin-top: 100px;
}

.form-buttons{
    position: absolute;
    left:100px;
    height: 70px;
    right: 100px;
    bottom: 50px;
    /* background-color: blue; */
}

.line-input{
    border: 0;
    outline: 0;
    background: transparent;
    border-bottom: 1px solid black;
    font-size: 30px;
    text-align:left;
}

.inputfile{
    width: 0.1px;
	height: 0.1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}

.inputfile + label {
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    font-size: 25px;
    color: white;
    background-color: #FC4A1A;
    display: inline-block;
    cursor: pointer;
    border-radius: 8px;
}

.inputfile:focus + label,
.inputfile + label:hover {
    background-color: rgb(124, 51, 51);
}

.browse-button{
    font-size: 25px;
    font-family: 'Open Sans', sans-serif;
}

.upload-icon{
    margin-right: 10px;
}

.processing-status{
    display: none;
    left: 0;
    right: 0;
    text-align: center;
    position: absolute;
    top: 50%;
}
#upload-error-message{
    display: none;
    font-size: 30px;
    color: red;
    font-weight: bold;
    margin: 0;
}

